--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,11 @@ endif ()
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 
 set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -O0 -fsanitize=thread -fstack-check -fstack-protector-strong -fno-omit-frame-pointer -g -DDEBUG")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -ftree-vectorize -fopt-info-vec-missed")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fopt-info-vec")
 set(CMAKE_CXX_FLAGS -pthread)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 
-add_executable(LoF main.cpp GoLSeq.h GoLThread.h)
+add_executable(LoF main.cpp GoLSeq.h GoLThread.h GoLOpenMP.h GoLPool.h taskQueue.h)
 
 target_link_libraries(LoF
         PUBLIC
