--- a/divide_conquer/CMakeLists.txt
+++ b/divide_conquer/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.11)
-project(divede_conquer)
+project(divide_conquer)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS -pthread)
@@ -8,4 +8,4 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -O0 -fsanitize=thread -fstack-check -fstack-protector-strong -fno-omit-frame-pointer -g -DDEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fopenmp -pthread")
 
-add_executable(divede_conquer divideConquer.cpp main.cpp)
+add_executable(divide_conquer divideConquer.cpp main.cpp)
